@@ -1,3 +1,6 @@
+2011-12-05
+* remove unused database
+
 2011-12-01
 * don't follow symlinks for chmod
 * unsquashfs from openwrt with lzma cannot unpack to an existing directory, so
